...
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout
    android:id="@+id/container"
    style="@style/dialogForm"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.habits.edit.BaseDialog"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/formPanel"
        style="@style/dialogFormPanel">

        <LinearLayout
            android:id="@+id/namePanel"
            style="@style/dialogFormRow">

            <EditText
                android:id="@+id/tvName"
                style="@style/dialogFormInput"
                android:hint="@string/name">

                <requestFocus/>
            </EditText>

...
            <TextView
                android:id="@+id/tvReminderDays"
                style="@style/dialogFormSpinner"/>

        </LinearLayout>
        <LinearLayout
        android:id="@+id/numericPanel"
        style="@style/dialogFormRow"
            android:weightSum="1">
            <TextView
                style="@style/dialogFormLabel"
                android:text="@string/numerical_habit"/>

            <Switch
                android:id="@+id/numericSwitch"
                style="@style/dialogFormLabel"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/type_regular"
                android:textOn="@string/type_numeric"
                android:layout_weight="0.03" />


            <ImageButton
                android:id="@+id/numericPopUpIcon"
                android:contentDescription="Numeric Icon"
                android:src="@drawable/ic_number"
                android:layout_width="52dp"
                android:layout_height="match_parent"
                android:background="@drawable/color_picker_swatch"
                android:visibility="gone"/>

...
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discard"/>

        <Button
            android:id="@+id/buttonSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
    </LinearLayout>
</LinearLayout>
...
