...
  -->

<resources>

    <string name="app_name">Loop Habit Tracker</string>
    <string name="main_activity_title">Habits</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="add_habit">Add habit</string>
    <string name="color_picker_default_title">Change color</string>

    <string name="toast_habit_created">Habit created</string>
    <string name="toast_habit_deleted">Habits deleted</string>
    <string name="toast_habit_restored">Habits restored</string>
    <string name="toast_nothing_to_undo">Nothing to undo</string>
...
    <string name="days">days</string>
    <string name="reminder">Reminder</string>
    <string name="numerical_habit">Numerical Habit</string>
    <string name="numeric_text">Enter frequency:</string>
    <string name="type_numeric">Numeric</string>
    <string name="type_regular">Regular</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="streaks">Streaks</string>
    <string name="no_habits_found">You have no active habits</string>
    <string name="long_press_to_toggle">Press-and-hold to check or uncheck</string>
    <string name="numerical_toggle">Almost There!</string>
    <string name="reminder_off">Off</string>
    <string name="validation_name_should_not_be_blank">Name cannot be blank.</string>
...
