...

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/toolbar"
    android:background="?windowBackgroundColor"
    android:clipToPadding="false"
    android:fillViewport="true"
    tools:showIn="@layout/show_habit">

    <LinearLayout
...
