...
    <item
        android:id="@+id/action_edit_note"
        android:icon="?iconNote"
        android:title="@string/note"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_edit_habit"
        android:icon="?iconEdit"
        android:title="@string/edit"
        app:showAsAction="always"/>

</menu>
